--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <!--FIM BOOTSTRAO ICONS-->
 
-    <title>André Costa</title>
+    <title>Mattosy Tattoo</title>
     <link rel="stylesheet" href="style.css">
     <script src="menu.js" defer></script>
 </head>
