--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <!--FIM BOOTSTRAO ICONS-->
 
-    <title>Mattosy Tattoo</title>
+    <title>Mattosy Tatto</title>
     <link rel="stylesheet" href="style.css">
     <script src="menu.js" defer></script>
 </head>
@@ -37,7 +37,7 @@
                 <a href="http://wa.me/+5567999444131">
                     <button>Contato</button>
                 </a>
-            </div><!--EF contato-->
+            </div><!--Mattosy contato-->
                 <!--MENU MOBILE--> 
             <div class="btn-abrir-menu" id="btn-menu">
                 <i class="bi bi-list-task"></i>
@@ -81,7 +81,7 @@
                         </div>
                     </div><!--txt-topo-site-->
                     <div class="img-topo-site">
-                        <img src="logo.jpg" alt="">
+                        <img src="Mattosy.jpg" alt="">
                     </div><!--img-topo-site-->
                 </div><!--flex-->
             </div><!--interface-->
