--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="logo.jpg" alt="Logo SmartSistem">
+                    <img src="logo.jpeg" alt="Logo SmartSistem">
                 </a>
 
             </div><!--Logo-->
@@ -81,7 +81,7 @@
                         </div>
                     </div><!--txt-topo-site-->
                     <div class="img-topo-site">
-                        <img src="Mattosy.jpg" alt="">
+                        <img src="Mattosy.jpeg" alt="">
                     </div><!--img-topo-site-->
                 </div><!--flex-->
             </div><!--interface-->
