--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-                        <h1><span>André Costa: </span>Seja muito bem vindo, inspirado pela tradição, movido pela arte. Explore meu portfólio!<span>!</span></h1>
+                        <h1><span>Mattosy: </span>Seja muito bem vindo, inspirado pela tradição, movido pela arte. Explore meu portfólio!<span>!</span></h1>
                         
 
                         <div class="EF-contato">
